--- a/.github/workflows/njsscan.yml
+++ b/.github/workflows/njsscan.yml
@@ -12,12 +12,16 @@ jobs:
       # required for all workflows
       security-events: write
       # only required for workflows in private repositories
-      actions: read
+      actions: readss
       contents: read
     steps:
-    - uses: actions/checkout@v4
+    - name: Upload njsscan report
+      uses: github/codeql-action/upload-sarif@v3
+      with:
+        # Path to SARIF file relative to the root of the repository
+        sarif_file: results.sarif
     - name: nodejsscan scan
       id: njsscan
       uses: ajinabraham/njsscan-action@master
       with:
-        args: '.'
+        args: '. --sarif --output results.sarif || true'
