added SARIF integration v1

--- a/.github/workflows/njsscan.yml
+++ b/.github/workflows/njsscan.yml
@@ -12,7 +12,7 @@ jobs:
       # required for all workflows
       security-events: write
       # only required for workflows in private repositories
-      actions: readss
+      actions: reads
       contents: read
     steps:
     - name: Upload njsscan report
