--- a/.github/workflows/njsscan.yml
+++ b/.github/workflows/njsscan.yml
@@ -12,16 +12,17 @@ jobs:
       # required for all workflows
       security-events: write
       # only required for workflows in private repositories
-      actions: reads
+      actions: read
       contents: read
     steps:
-    - name: Upload njsscan report
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-        # Path to SARIF file relative to the root of the repository
-        sarif_file: results.sarif
+    - uses: actions/checkout@v4
     - name: nodejsscan scan
       id: njsscan
       uses: ajinabraham/njsscan-action@master
       with:
         args: '. --sarif --output results.sarif || true'
+    - name: Upload njsscan report
+      uses: github/codeql-action/upload-sarif@v3
+      with:
+        # Path to SARIF file relative to the root of the repository
+        sarif_file: results.sarif
